Use `gap` instead of fixed padding-right

--- a/web/src/res/style/common.less
+++ b/web/src/res/style/common.less
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1;
 	padding: 1.2rem;
 	font-weight: 500;
+	gap: 1.2rem;
 	& > .spacer {
 		flex: 1;
 	}
@@ -30,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
 			text-decoration: underline;
 			outline: 0;
 		}
-		padding-right: 10px;
 	}
 	#user_info {
 		display: inline-flex;
